GPC/tests/examples/fail/wrongPointers5.gpc

void wrongPointers5(double *d) {
    
    double* e = d == 0.53;

}
